# src/restful-api-declaration.ts
@@ -12,6 +12,7 @@ export type RequestRestfulAPI = {
   <T extends BlogIgnorableField = never>(method: 'PATCH', url: '/api/blogs/{id}', args: { path: { id: number }, query?: { ignoredFields?: T[] }, body?: { content?: string, meta?: unknown } }): Promise<{ result: Omit<Blog, T> }>
   (method: 'DELETE', url: '/api/blogs/{id}', args: { path: { id: number } }): Promise<{  }>
   (method: 'GET', url: '/api/blogs/{id}/download', args: { path: { id: number } }): Promise<Readable>
+  (method: 'POST', url: '/api/blogs/upload', args: { body: { file: File, id: number } }): Promise<{  }>
 }
 
 export type GetRequestApiUrl = {
@@ -21,6 +22,7 @@ export type GetRequestApiUrl = {
   <T extends BlogIgnorableField = never>(url: '/api/blogs/{id}', args: { path: { id: number }, query?: { ignoredFields?: T[] } }): string
   (url: '/api/blogs/{id}', args: { path: { id: number } }): string
   (url: '/api/blogs/{id}/download', args: { path: { id: number } }): string
+  (url: '/api/blogs/upload'): string
 }
 
 export type GetBlogs = <T extends BlogIgnorableField = never>(req: { query: { skip: number, take: number, content?: string, sortField: "id" | "content", sortType: "asc" | "desc", ignoredFields?: T[], ids?: string[] } }) => Promise<{ result: Omit<Blog, T>[], count: number }>
@@ -29,6 +31,7 @@ export type CreateBlog = <T extends BlogIgnorableField = never>(req: { query?: {
 export type PatchBlog = <T extends BlogIgnorableField = never>(req: { path: { id: number }, query?: { ignoredFields?: T[] }, body?: { content?: string, meta?: unknown } }) => Promise<{ result: Omit<Blog, T> }>
 export type DeleteBlog = (req: { path: { id: number } }) => Promise<{  }>
 export type DownloadBlog = (req: { path: { id: number } }) => Promise<Readable>
+export type UploadBlog = (req: { body: { file: Readable, id: number } }) => Promise<{  }>
 
 const getBlogsValidate = ajv.compile({
   "type": "object",
@@ -300,6 +303,38 @@ const downloadBlogValidate = ajv.compile({
   ],
   "definitions": {}
 })
+const uploadBlogValidate = ajv.compile({
+  "type": "object",
+  "properties": {
+    "path": {
+      "type": "object",
+      "properties": {},
+      "required": []
+    },
+    "query": {
+      "type": "object",
+      "properties": {},
+      "required": []
+    },
+    "body": {
+      "type": "object",
+      "properties": {
+        "file": {},
+        "id": {
+          "type": "number"
+        }
+      },
+      "required": [
+        "file",
+        "id"
+      ]
+    }
+  },
+  "required": [
+    "body"
+  ],
+  "definitions": {}
+})
 
 export const registerGetBlogs = (app: Application, handleHttpRequest: HandleHttpRequest, handler: GetBlogs) => handleHttpRequest(app, 'get', '/api/blogs', 'blog', getBlogsValidate, handler)
 export const registerGetBlogById = (app: Application, handleHttpRequest: HandleHttpRequest, handler: GetBlogById) => handleHttpRequest(app, 'get', '/api/blogs/:id', 'blog', getBlogByIdValidate, handler)
@@ -307,3 +342,4 @@ export const registerCreateBlog = (app: Application, handleHttpRequest: HandleHt
 export const registerPatchBlog = (app: Application, handleHttpRequest: HandleHttpRequest, handler: PatchBlog) => handleHttpRequest(app, 'patch', '/api/blogs/:id', 'blog', patchBlogValidate, handler)
 export const registerDeleteBlog = (app: Application, handleHttpRequest: HandleHttpRequest, handler: DeleteBlog) => handleHttpRequest(app, 'delete', '/api/blogs/:id', 'blog', deleteBlogValidate, handler)
 export const registerDownloadBlog = (app: Application, handleHttpRequest: HandleHttpRequest, handler: DownloadBlog) => handleHttpRequest(app, 'get', '/api/blogs/:id/download', 'blog', downloadBlogValidate, handler)
+export const registerUploadBlog = (app: Application, handleHttpRequest: HandleHttpRequest, handler: UploadBlog) => handleHttpRequest(app, 'post', '/api/blogs/upload', 'blog', uploadBlogValidate, handler)
